# playokBot

./: INSTALLATION_GUIDE.md  README.md  SETUP.bat  SETUP_INSTRUCTIONS.md  calibrate_coordinates.py  checkerboard_calibration.json  checkerboard_connector.spec  install_native_host.bat  kingrow_connector.py  kingrow_host_manifest.json  move_relay.py  pyproject.toml  quick_setup.py  setup_extension.py  test_connector.bat  test_connector.py  test_extension.py
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
